--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "fmt": "prettier --write .",
+    "fmt.check": "prettier --check ."
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "prettier": "^3.2.5",
+    "prettier-plugin-css-order": "^2.1.2",
     "turbo": "^2.1.3",
     "typescript": "^5.4.5"
   },
