--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "fmt.check": "prettier --check ."
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/types": "^19.5.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
