--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bruno-simon-lessons-monorepo",
   "private": true,
   "scripts": {
+    "prepare": "node .husky/install.mjs",
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
@@ -15,6 +16,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
+    "husky": "^9.1.6",
     "prettier": "^3.2.5",
     "prettier-plugin-css-order": "^2.1.2",
     "turbo": "^2.1.3",
