--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.2.5",
     "prettier-plugin-css-order": "^2.1.2",
     "turbo": "^2.1.3",
