--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,10 +2,12 @@
   "name": "@repo/eslint-config",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "files": [
     "library.js",
     "next.js",
-    "react-internal.js"
+    "react-internal.js",
+    "vite.js"
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.11.0",
@@ -14,6 +16,16 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-turbo": "^2.2.3",
     "eslint-plugin-only-warn": "^1.1.0",
-    "typescript": "^5.6.3"
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.13",
+    "globals": "^15.11.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0"
+  },
+  "dependencies": {
+    "@eslint/js": "^9.13.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.13.0"
   }
 }
