--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,7 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "exports": {
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
@@ -20,6 +21,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "eslint": "^9.13.0",
+    "globals": "^15.11.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
