--- a/apps/basics-lesson-4/package.json
+++ b/apps/basics-lesson-4/package.json
@@ -7,6 +7,7 @@
     "build": "vite build",
     "clean": "rm -rf dist",
     "dev": "vite --host 0.0.0.0 --clearScreen false",
+    "e2e": "playwright test",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,mjs,ts,tsx}\" --report-unused-disable-directives --max-warnings 0",
     "lint:css": "stylelint \"**/*.css\" --max-warnings 0 --allow-empty-input --cache --cache-strategy=content --cache-location=.stylelintcache"
@@ -15,7 +16,10 @@
     "three": "0.169.0"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.0",
+    "@playwright/test": "^1.48.1",
     "@repo/eslint-config": "workspace:*",
+    "@repo/playwright-config": "workspace:*",
     "@repo/stylelint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/three": "0.169.0",
