--- a/packages/stylelint-config/package.json
+++ b/packages/stylelint-config/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "type": "module",
-  "dependencies": {
+  "exports": {
+    ".": "./stylelint.config.ts"
+  },
+  "devDependencies": {
     "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
