--- a/apps/basics-lesson-3/package.json
+++ b/apps/basics-lesson-3/package.json
@@ -22,6 +22,7 @@
     "@repo/playwright-config": "workspace:*",
     "@repo/stylelint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/node": "^22.7.9",
     "@types/three": "0.169.0",
     "stylelint": "^16.10.0",
     "typescript": "^5.6.3",
