--- a/apps/basics-lesson-6/package.json
+++ b/apps/basics-lesson-6/package.json
@@ -22,11 +22,11 @@
     "@repo/playwright-config": "workspace:*",
     "@repo/stylelint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/vite-config": "workspace:*",
     "@types/node": "^22.7.9",
     "@types/three": "0.169.0",
     "stylelint": "^16.10.0",
     "typescript": "^5.6.3",
-    "vite": "^5.4.10",
-    "vite-plugin-restart": "^0.4.1"
+    "vite": "^5.4.10"
   }
 }
