--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,13 +18,19 @@
     "@turbo/gen": "^2.2.3",
     "@types/eslint": "^9.6.1",
     "@types/node": "^22.7.9",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "react": "19.0.0-rc-65a56d0e-20241020"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    }
   }
 }
