chore(lint-staged): update lint-staged

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,5 @@
 {
-  "*": ["prettier --check"]
+  "**/*.{js,mjs,ts,tsx,md,mdx}": ["turbo run lint --", "prettier --check"],
+  "**/*.css": ["stylelint --allow-empty-input", "prettier --check"],
+  "**/*.{json,yml}": ["prettier --check"]
 }
