--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
-public-hoist-pattern=['*eslint*', '*prettier*', '*stylelint*']
+public-hoist-pattern[]='*eslint*'
+public-hoist-pattern[]='*prettier*'
+public-hoist-pattern[]='*stylelint*'
