--- a/basics/lesson-10/package.json
+++ b/basics/lesson-10/package.json
@@ -11,7 +11,7 @@
     "typecheck": "tsc --noEmit",
     "lint:js": "eslint \"**/*.{js,mjs,ts,tsx}\" --report-unused-disable-directives --max-warnings 0",
     "lint:css": "stylelint \"**/*.css\" --max-warnings 0 --allow-empty-input --cache --cache-strategy=content --cache-location=.stylelintcache",
-    "lint": "turbo run lint:js lint:css"
+    "lint": "run-s lint:js lint:css"
   },
   "dependencies": {
     "@repo/static-assets": "workspace:*",
@@ -29,6 +29,7 @@
     "@repo/vite-config": "workspace:*",
     "@types/node": "^22.8.1",
     "@types/three": "0.169.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.6.3",
     "vite": "^5.4.10"
   }
