--- a/react-apps/bruno-room/package.json
+++ b/react-apps/bruno-room/package.json
@@ -22,6 +22,7 @@
     "three-stdlib": "^2.34.0"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.0",
     "@playwright/test": "^1.48.2",
     "@repo/eslint-config": "workspace:*",
     "@repo/playwright-config": "workspace:*",
