--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,9 +23,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: pnpm/action-setup@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
         with:
-          version: 9
+          run_install: false
       - name: Restore Lint Cache
         uses: actions/cache/restore@v4
         with:
