--- a/react-apps/bruno-room/package.json
+++ b/react-apps/bruno-room/package.json
@@ -9,7 +9,7 @@
     "e2e": "playwright test",
     "lint:js": "eslint \"**/*.{js,mjs,ts,tsx}\" --report-unused-disable-directives --max-warnings 0",
     "lint:css": "stylelint \"**/*.css\" --max-warnings 0 --allow-empty-input --cache --cache-strategy=content --cache-location=.stylelintcache",
-    "lint": "run-s lint:js lint:css",
+    "lint": "run-p lint:js lint:css",
     "preview": "vite preview"
   },
   "dependencies": {
